Prevent horizontal scrolling of the page, we never want it

--- a/public/nciea.css
+++ b/public/nciea.css
@@ -1603,6 +1603,7 @@ tr.table-cell-alert a:hover {
 
 body {
   padding-top: 60px;
+  overflow-x: hidden;
 }
 
 iframe {
